<resources>
    <string name="app_name">TipCalculatorCounter2</string>
    <string name="number_of_people_splitting_the_bill">Number of people splitting the bill?</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="textview">TextView</string>
    <string name="total">Total</string>
    <string name="total_per_person">Total Per Person</string>
    <string name="tip">Tip</string>
    <string name="blank" />
</resources>
